@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,7,452
-#define PRODUCTVER     0,3,7,452
-#define STRFILEVER     _T("0.3.7.452")
-#define STRPRODUCTVER  _T("0.3.7.452")
-#define STRPRODUCTDATE  _T("2009-10-07")
+#define FILEVER        0,3,7,480
+#define PRODUCTVER     0,3,7,480
+#define STRFILEVER     _T("0.3.7.480")
+#define STRPRODUCTVER  _T("0.3.7.480")
+#define STRPRODUCTDATE  _T("2009-10-11")
 #endif // AUTOBUILD_H
